disable GTM id override

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -23,7 +23,7 @@ gtm_datalayer = "basic" # set value to "basic" to build and populate a dataLayer
 gtm_endpoint = "load.sgtm.henriksoderlund.com" # enter hostname of GTM server-side endpoint in format sub.domain.tld. if unavailable leave blank as ""
 use_custom_library_name = true # If this is set to true, ensure to set the gtm_library_name variable below and configure the GTM Custom Loader client template inside your ssGTM container
 gtm_library_name = "tyirczbv.js" # if using Simo Ahava's Custom GTM Loader template to enable changing the name of the GTM library, set the document name here. 
-override_container_id = true # Set this to true only if Simo Ahava's Custom GTM Loader client template is used and configured to "Override Container ID" where you have added your preferred GTM container ID. 
+override_container_id = false # Set this to true only if Simo Ahava's Custom GTM Loader client template is used and configured to "Override Container ID" where you have added your preferred GTM container ID. Will drop the 'id=GTM=123456' part from the script src.
 
 # optional - Google Tag Manager Staging/Development Environment 
 # create an additional "environment" from within the GTM Admin interface 
