--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -18,6 +18,7 @@ twitterCreator = "@henkis"
 # Google Tag Manager
 gtm_id = "GTM-FWR4" # enter GTM container ID in format "GTM-XXXXXX". This value is invalidated and redundant if the 'override_container_id' parameter below is set to true
 gtm_datalayer = "basic" # set value to "basic" to build and populate a dataLayer array with unique page metadata
+enable_gtm_in_staging = false # This enables/disables the GTM container on all dev/staging environments - this setting invalidate the optional 'gtm environment' settings below.
 
 # Server-side GTM related
 gtm_endpoint = "load.sgtm.henriksoderlund.com" # enter hostname of GTM server-side endpoint in format sub.domain.tld. if unavailable leave blank as ""
@@ -25,7 +26,7 @@ use_custom_library_name = true # If this is set to true, ensure to set the gtm_l
 gtm_library_name = "tyirczbv.js" # if using Simo Ahava's Custom GTM Loader template to enable changing the name of the GTM library, set the document name here. 
 override_container_id = false # Set this to true only if Simo Ahava's Custom GTM Loader client template is used and configured to "Override Container ID" where you have added your preferred GTM container ID. Will drop the 'id=GTM=123456' part from the script src.
 
-# optional - Google Tag Manager Staging/Development Environment 
+# Optional - Google Tag Manager Staging/Development Environment 
 # create an additional "environment" from within the GTM Admin interface 
 # extract the gtm_auth and gtm_preview query parameters from the 'src' URL query in the GTM snippet provided
 # this gtm environment snippet activates whenever the HUGO_ENVIRONMENT variable is not set to 'production'
@@ -79,7 +80,7 @@ fillImage = "1280x720 Center" # normalize image size
 footer = "Powered by <a href=\"https://pages.cloudflare.com/\" target=\"_blank\" >Cloudflare Pages</a>, <a href=\"https://gohugo.io/\" target=\"_blank\" >Hugo</a>, and <a href=\"https://gethyas.com/\" target=\"_blank\" >Hyas</a>"
 
 # Feed
-copyRight = "Copyright (c) 2022 Henrik Söderlund"
+copyRight = "Copyright (c) 2023 Henrik Söderlund"
 
 # Alert
 alert = false
