--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -16,14 +16,15 @@ twitterSite = "@henkis"
 twitterCreator = "@henkis"
 
 # Google Tag Manager
-gtm_id = "GTM-FWR4" # enter GTM container ID in format "GTM-XXXXXX". This value is invalidated and redundant if the 'override_container_id' parameter below is set to true
+gtm_id = "6at4snq=aWQ9R1RNLUZXUjQ%3D&page=1" # Enter GTM container ID. This value is invalidated and redundant if the 'override_container_id' parameter below is set to true
+gtm_id_noscript = "GTM-FWR4" # Enter GTM container ID. This is usually the same as gtm_id, but can in some cases be different.
 gtm_datalayer = "basic" # set value to "basic" to build and populate a dataLayer array with unique page metadata
 disable_gtm_in_development = true # This disables the GTM container on non-production environments - this setting invalidate the optional 'gtm environment' settings below.
 
 # Server-side GTM related
 gtm_endpoint = "load.sgtm.henriksoderlund.com" # enter hostname of GTM server-side endpoint in format sub.domain.tld. if unavailable leave blank as ""
 use_custom_library_name = true # If this is set to true, ensure to set the gtm_library_name variable below and configure the GTM Custom Loader client template inside your ssGTM container
-gtm_library_name = "tyirczbv.js" # if using Simo Ahava's Custom GTM Loader template to enable changing the name of the GTM library, set the document name here. 
+gtm_library_name = "dz4d7tyirczbv.js" # if using Simo Ahava's Custom GTM Loader template to enable changing the name of the GTM library, set the document name here. 
 override_container_id = false # Set this to true only if Simo Ahava's Custom GTM Loader client template is used and configured to "Override Container ID" where you have added your preferred GTM container ID. Will drop the 'id=GTM=123456' part from the script src.
 
 # Optional - Google Tag Manager Staging/Development Environment 
@@ -83,7 +84,7 @@ fillImage = "1280x720 Center" # normalize image size
 footer = "Powered by <a href=\"https://pages.cloudflare.com/\" target=\"_blank\" >Cloudflare Pages</a>, <a href=\"https://gohugo.io/\" target=\"_blank\" >Hugo</a>, and <a href=\"https://gethyas.com/\" target=\"_blank\" >Hyas</a>"
 
 # Feed
-copyRight = "Copyright (c) 2023 Henrik Söderlund"
+copyRight = "Copyright (c) 2025 Henrik Söderlund"
 
 # Alert
 alert = false
